incident-lab/k8s/traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: signaldeck-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: traffic-generator
          image: curlimages/curl:8.15.0
          command: ["/bin/sh", "-c"]
          args:
            - |
              while true; do
                curl -sS --max-time 5 http://checkout:8080/checkout >/dev/null || true
                sleep 2
              done
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
